@startuml
!theme silver
top to bottom direction
scale 0.95
skinparam dpi 200
skinparam ranksep 45
skinparam nodesep 30
skinparam packagePadding 15
skinparam classFontSize 12
skinparam classFontName "Helvetica-Bold"
skinparam classBackgroundColor #E0F2FE
skinparam classHeaderBackgroundColor #0369A1
skinparam classHeaderFontColor #FFFFFF
skinparam classBorderColor #0369A1
skinparam classBorderThickness 2

package "HR & Department Domain" {
  entity "Department" as Department
  entity "Employee" as Employee
  entity "ExtraEmployeeDetails" as ExtraEmployeeDetails
  entity "Dependent" as Dependent <<Weak>>
  entity "Attendance" as Attendance <<Weak>>
  entity "Shift" as Shift
  entity "Employee_Shift" as Employee_Shift
}

package "Company & Procurement Domain" {
  entity "Company" as Company
  entity "Company_Type" as Company_Type
  entity "Company_Location" as Company_Location
  entity "RawMaterial" as RawMaterial
  entity "Company_RawMaterial" as Company_RawMaterial
  entity "PurchaseOrder" as PurchaseOrder
  entity "PurchaseOrder_RawMaterial" as PurchaseOrder_RawMaterial
  entity "OrderInvoice" as OrderInvoice
  entity "PO_Company" as PO_Company
  entity "Vehicle" as Vehicle
  entity "Consignment" as Consignment
  entity "Consignment_RawMaterial" as Consignment_RawMaterial
}

package "Warehouse & Inventory Domain" {
  entity "Warehouse" as Warehouse
  entity "RawMaterial_Warehouse" as RawMaterial_Warehouse
  entity "RawMaterial_Department" as RawMaterial_Department
}

package "Production & Quality Domain" {
  entity "FinalMaterial" as FinalMaterial
  entity "ProductionOrder" as ProductionOrder
  entity "ProductionOrder_RawMaterial_Warehouse" as ProductionOrder_RawMaterial_Warehouse
  entity "PhaseExecution" as PhaseExecution <<Weak>>
  entity "PhaseTimeLog" as PhaseTimeLog <<Weak>>
  entity "PhaseResourceConsumption" as PhaseResourceConsumption <<Weak>>
  entity "ResourceConsumed" as ResourceConsumed <<Weak>>
  entity "PackingBatch" as PackingBatch
  entity "FabricRoll" as FabricRoll
}

package "Worker & Shift Allocation Domain" {
  entity "Worker" as Worker <<Weak>>
  entity "Worker_Department" as Worker_Department
  entity "WorkerDept_Shift" as WorkerDept_Shift
  entity "Worker_PackingBatch" as Worker_PackingBatch
  entity "WorkerPacking_Shift" as WorkerPacking_Shift
  entity "Worker_Warehouse" as Worker_Warehouse
  entity "WorkerWarehouse_Shift" as WorkerWarehouse_Shift
}

' Relationships & Cardinalities with Relationship Attributes on Lines
Employee }|..|| Department : "1:N (belongs to)"
Employee }|..|| Employee : "1:N (supervised by)"
Department ||..o| Employee : "1:1 (managed by)"
ExtraEmployeeDetails ||..|| Employee : "1:1 (extension)"
Dependent }|..|| Employee : "1:N (dependent of)"
Attendance }|..|| Employee : "1:N (attendance log)"
Employee_Shift }|..|| Employee
Employee_Shift }|..|| Shift

Company }|..|| Employee : "1:N (represented by)"
Company_Type }|..|| Company
Company_Location }|..|| Company
Company_RawMaterial }|..|| Company
Company_RawMaterial }|..|| RawMaterial

PurchaseOrder }|..|| Department : "1:N (issued by)"
PurchaseOrder_RawMaterial }|..|| PurchaseOrder : "[unit_price]"
PurchaseOrder_RawMaterial }|..|| RawMaterial

PO_Company }|..|| PurchaseOrder : "[expected_ordercompletion_date]"
PO_Company }|..|| Company
PO_Company ||..|| OrderInvoice : "1:1 (invoiced)"

Vehicle }|..|| Company : "1:N (owned by)"
Consignment }|..|| Vehicle : "1:N (shipped via)"
Consignment }|..|| Warehouse : "1:M (delivered to)"
Consignment }|..|| PurchaseOrder : "1:N (fulfills) [Transport_CP, expected_arrival_date]"
Consignment_RawMaterial }|..|| Consignment : "[qty_delivered]"
Consignment_RawMaterial }|..|| RawMaterial

Warehouse }|..|| Department : "1:N (managed by)"
RawMaterial_Warehouse }|..|| RawMaterial : "[qty_stock]"
RawMaterial_Warehouse }|..|| Warehouse
RawMaterial_Department }|..|| RawMaterial
RawMaterial_Department }|..|| Department

ProductionOrder }|..|| Department : "1:N (planned by)"
ProductionOrder }|..|| FinalMaterial : "1:N (produces) [expected_qty_output]"
ProductionOrder_RawMaterial_Warehouse }|..|| ProductionOrder : "[qty_required]"
ProductionOrder_RawMaterial_Warehouse }|..|| RawMaterial_Warehouse

PhaseExecution }|..|| ProductionOrder : "1:N (phase of)"
PhaseExecution }|..|| Department : "N:1 (executed in)"
PhaseExecution }|..o| FinalMaterial : "[qty_produced]"
PhaseTimeLog }|..|| PhaseExecution : "1:N (time logs)"
PhaseResourceConsumption }|..|| PhaseExecution : "1:N (resource logs)"
ResourceConsumed }|..|| PhaseResourceConsumption

PackingBatch }|..|| Department : "1:N (packed in)"
PackingBatch }|..o| PhaseExecution : "1:N (packs phase) [status]"
FabricRoll }|..|| PackingBatch : "1:N (contains rolls)"
FabricRoll }|..|| Warehouse : "N:1 (stored in) [storage_rack]"
FabricRoll }|..|| FinalMaterial : "1:N (made of) [qty_stored]"

Worker }|..|| Employee : "N:1 (owned by)"
Worker_Department }|..|| Worker
Worker_Department }|..|| Department
WorkerDept_Shift }|..|| Worker_Department : "[wages]"
WorkerDept_Shift }|..|| Shift

Worker_PackingBatch }|..|| Worker
Worker_PackingBatch }|..|| PackingBatch
WorkerPacking_Shift }|..|| Worker_PackingBatch : "[wages]"
WorkerPacking_Shift }|..|| Shift

Worker_Warehouse }|..|| Worker
Worker_Warehouse }|..|| Warehouse
WorkerWarehouse_Shift }|..|| Worker_Warehouse : "[wages]"
WorkerWarehouse_Shift }|..|| Shift

@enduml
